--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,6 +6,19 @@ services:
       dockerfile: ./Kapitalist.Worker/Dockerfile.dev
     volumes:
       - ./Kapitalist.Worker/logs:/logs
+
+  rates-api:
+    build:
+      dockerfile: ./Kapitalist.RatesApi/Dockerfile.dev
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    volumes:
+      - ./Kapitalist.Worker/logs:/logs
+    ports:
+      - 5010:5010
+      - 5011:5011
+    depends_on: 
+      - rates-db
   
   rates-db:
     environment:
