--- a/Kapitalist.RatesApi/appsettings.Development.json
+++ b/Kapitalist.RatesApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDbContext": "Server=localhost;Database=rates;Port=5432;User Id=postgres;Password=postgres_password"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
