Rates database persistance

--- a/Kapitalist.RatesApi/appsettings.Development.json
+++ b/Kapitalist.RatesApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppDbContext": "Server=localhost;Database=rates;Port=5432;User Id=postgres;Password=postgres_password"
+    "AppDbContext": "Server=127.0.0.1;Database=rates;Port=5432;User Id=postgres;Password=postgres_password"
   },
   "Serilog": {
     "MinimumLevel": {
