--- a/Kapitalist.RatesApi/Kapitalist.RatesApi.csproj
+++ b/Kapitalist.RatesApi/Kapitalist.RatesApi.csproj
@@ -4,6 +4,14 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
         <Protobuf Include="Protos\rates.proto" GrpcServices="Server" />
     </ItemGroup>
